fixed horizontal spacing for all screen sizes

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1886,6 +1886,14 @@ video {
     width: 25%;
   }
 
+  .lg\:w-2\/3{
+    width: 66.666667%;
+  }
+
+  .lg\:w-3\/4{
+    width: 75%;
+  }
+
   .lg\:w-4\/5{
     width: 80%;
   }
